--- a/app/src/main/res/layout/activity_mode.xml
+++ b/app/src/main/res/layout/activity_mode.xml
@@ -6,9 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <TextView
         android:id="@+id/txtMode"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center_horizontal"
         android:layout_height="wrap_content"
         android:text="Select Mode"
         android:textSize="25sp"
@@ -16,12 +18,14 @@
         android:textColor="@color/black"
         android:layout_marginBottom="12dp"/>
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_marginBottom="12dp">
+        android:layout_marginBottom="12dp"
+        android:weightSum="3">
 
         <Button
             android:id="@+id/btnRed"
@@ -30,7 +34,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#870000"
             android:text="RED"
-            android:textSize="9sp"/>
+            android:textSize="13sp"/>
 
         <Button
             android:id="@+id/btnGreen"
@@ -38,7 +42,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="GREEN"
-            android:textSize="9sp"
+            android:textSize="13sp"
             android:backgroundTint="#0EA46A"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"/>
@@ -50,19 +54,20 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#5069F6"
             android:text="BLUE"
-            android:textSize="9sp"
-            />
-        <Button
-            android:id="@+id/btnnext"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#93C1C7"
-            android:textSize="9sp"
-            android:textColor="@color/black"
-            android:text="Next"
-            android:layout_marginLeft="5dp"/>
+            android:textSize="13sp"/>
     </LinearLayout>
+
+
+    <Button
+        android:id="@+id/btnnext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#93C1C7"
+        android:text="Next"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:layout_marginBottom="12dp"/>
+
 
     <FrameLayout
         android:id="@+id/frameLayout"
