--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -20,10 +20,11 @@
 
     <TextView
         android:id="@+id/txtWorkout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:background="#E6D0B0"
         android:textColor="#000000"
         android:paddingTop="6dp"/>
 </LinearLayout>
