--- a/app/src/main/res/layout/activity_chatbot.xml
+++ b/app/src/main/res/layout/activity_chatbot.xml
@@ -3,13 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16.0dp"
+    android:background="#4FABA3"
     >
 
     <TextView
         android:id="@+id/chatTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Fitness AI Assistant"
+        android:text="QuickFit AI Assistant"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
@@ -20,12 +21,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/inputArea"
+        android:background="#094650"
         android:layout_below="@id/chatTitle">
 
         <TextView
             android:id="@+id/txtResponse"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="Hi! How can I help you with your fitness goals today?"
             android:textSize="16sp" />
     </ScrollView>
@@ -40,6 +43,7 @@
         <EditText
             android:id="@+id/editMessage"
             android:layout_width="0dp"
+            android:textColor="@color/black"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="Ask about workouts..." />
@@ -48,6 +52,8 @@
             android:id="@+id/btnSend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:backgroundTint="#93C1C7"
             android:text="Send" />
     </LinearLayout>
 </RelativeLayout>
