--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -6,4 +6,5 @@
     <item android:id="@+id/nav_logout" android:title="Logout"/>
     <item android:id="@+id/nav_ai" android:title="AI Chatbot"/>
     <item android:id="@+id/nav_chat" android:title="User Chat"/>
+    <item android:id="@+id/nav_ad" android:title="View Ad"/>
 </menu>
