--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,34 +2,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#0A7368"
-    tools:context="login">
+    tools:context=".login">
+
     <ImageView
         android:id="@+id/logoimg"
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_gravity="center"
         android:layout_marginTop="18dp"
-        android:src="@drawable/f3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:src="@drawable/f3" />
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="480dp"
-        android:layout_marginLeft="23dp"
-        android:layout_marginRight="23dp"
-        android:layout_marginTop="5dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="23dp"
         app:cardBackgroundColor="#282727"
         app:cardCornerRadius="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="30dp"
             android:orientation="vertical">
 
             <TextView
@@ -38,69 +35,72 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="35dp"
                 android:layout_marginBottom="22dp"
-                android:text="login"
+                android:text="Login"
                 android:textColor="#64CAC1"
-                android:textSize="35dp"
-                android:textStyle="bold">
+                android:textSize="35sp"
+                android:textStyle="bold" />
 
-
-
-            </TextView>
             <TextView
-                android:id="@+id/Emailtxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
-                android:layout_marginTop="10dp"
                 android:text="Email"
                 android:textColor="@color/white"
-                android:textSize="20dp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/etEmail"
-                android:layout_width="265dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
-                android:hint="Enter email "
+                android:layout_marginRight="40dp"
+                android:hint="Enter email"
+                android:inputType="textEmailAddress"
                 android:textColorHint="#928F8F"
-                android:textColor="@color/white">
-
-            </EditText>
+                android:textColor="@color/white" />
 
             <TextView
-                android:id="@+id/passwordtxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
                 android:layout_marginTop="15dp"
                 android:text="Password"
                 android:textColor="@color/white"
-                android:textSize="20dp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/etpass1"
-                android:layout_width="265dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
                 android:hint="Enter password"
+                android:inputType="textPassword"
                 android:textColorHint="#928F8F"
-                android:textColor="@color/white"
-                >
+                android:textColor="@color/white" />
 
-            </EditText>
+            <TextView
+                android:id="@+id/forgotPasswordtxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="10dp"
+                android:text="Forgot Password?"
+                android:textColor="#64CAC1"
+                android:textSize="14sp" />
 
             <Button
                 android:id="@+id/Loginbtn"
-                android:layout_width="120dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="25dp"
                 android:backgroundTint="#4FABA3"
                 android:text="Login"
                 android:textColor="@color/black"
-                android:textSize="18dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -108,14 +108,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="6dp"
-                android:text="Sign up"
+                android:layout_marginTop="15dp"
+                android:text="Don't have an account? Sign up"
                 android:textColor="#FFFFFF"
-                android:textSize="14dp"
-                android:textStyle="bold">
-
-            </TextView>
+                android:textSize="14sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
 </LinearLayout>
