--- a/app/src/main/res/layout/item_chat_sent.xml
+++ b/app/src/main/res/layout/item_chat_sent.xml
@@ -1,21 +1,32 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="end"
-    android:padding="8dp"
-    android:orientation="vertical">
-    <TextView
-        android:id="@+id/text_message_body"
+    android:padding="8dp">
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#0084FF"
-        android:textColor="#FFFFFF"
-        android:padding="12dp"
-        android:text="Sent Message" />
-    <TextView
-        android:id="@+id/text_message_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="10sp"
-        android:text="12:00 PM" />
-</LinearLayout>
+        android:layout_alignParentRight="true"
+        android:background="#DCF8C6"
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:maxWidth="280dp">
+
+        <TextView
+            android:id="@+id/senderMsg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hi"
+            android:textColor="#000"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/senderTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="10:01 AM"
+            android:textSize="10sp"
+            android:layout_gravity="right" />
+    </LinearLayout>
+</RelativeLayout>
