--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -7,7 +7,8 @@
         android:id="@+id/chatRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/inputLayout" />
+        android:layout_above="@+id/inputLayout"
+        android:background="#D7BA90"/>
 
     <LinearLayout
         android:id="@+id/inputLayout"
@@ -28,6 +29,8 @@
             android:id="@+id/sendBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/black"
+            android:textColor="@color/white"
             android:text="Send" />
     </LinearLayout>
 </RelativeLayout>
