--- a/app/src/main/res/layout/activity_users_list.xml
+++ b/app/src/main/res/layout/activity_users_list.xml
@@ -7,5 +7,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/usersRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="#D7BA90"/>
 </LinearLayout>
