--- a/app/src/main/res/layout/item_chat_received.xml
+++ b/app/src/main/res/layout/item_chat_received.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:background="#E8E8E8"
+        android:background="#0A7368"
         android:orientation="vertical"
         android:padding="10dp"
         android:maxWidth="280dp">
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello"
-            android:textColor="#000"
+            android:textColor="@color/white"
             android:textSize="16sp" />
 
         <TextView
@@ -26,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="10:00 AM"
+            android:textColor="@color/white"
             android:textSize="10sp"
             android:layout_gravity="right" />
     </LinearLayout>
