--- a/app/src/main/res/layout/item_chat_sent.xml
+++ b/app/src/main/res/layout/item_chat_sent.xml
@@ -8,25 +8,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:background="#DCF8C6"
+        android:background="#0A7368"
+        android:maxWidth="280dp"
         android:orientation="vertical"
-        android:padding="10dp"
-        android:maxWidth="280dp">
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/senderMsg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hi"
-            android:textColor="#000"
+            android:textColor="#F6F3F3"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/senderTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
             android:text="10:01 AM"
-            android:textSize="10sp"
-            android:layout_gravity="right" />
+            android:textColor="@color/white"
+            android:textSize="10sp" />
     </LinearLayout>
 </RelativeLayout>
